# litter-detection

./: .gitignore  README.md  mlflow.db  monitoring_setup_blueprint.ipynb  otel_instrumentation.py  prepare.py  program.md  pyproject.toml  student_task.md  student_task_1.md  student_task_2.md  train.py  train2.py  train_baseline.py  train_ohne_modeländerung.py
Documentation/: nodes.md
Documentation/Prompts/: README.md  Vorlage_KI_Richtlinie_Doku.md
Documentation/Prompts/Vorlesung 1/: webcam_via_zenoh.md
Documentation/Prompts/Vorlesung 2/: bau der struktur.md  interference task.md  model als .onnx speichern.md  zu prepare.py.md
Documentation/Task2_improvments/: improvments.md
Documentation/general_info/: README.md
Documentation/student_task_1/Task1_understanding/: understanding_repo.md
Documentation/student_task_2/: plan what agents.md
Monitoring_Doku/: MONITORING_DOKUMENTATION_DE.md  MONITORING_STACK_QUICKSTART.md
Vorlesung/02_Vorlesung/: DEB AI-Systems.html
Vorlesung/03_Vorlesung_2/: cnn-explain-visually-fashion-mnist-classification.ipynb
Vorlesung/03_Vorlesung_2/DEB AI-Systems_files/: NNue6rkDrws.html  QM0sYbEQSkM.html  RdC7KZ6OFPA.html  SUbqykXVx0A.html  _PwhiWxHK8o.html  base.js.Download  m=root,base  rs=AGKMywE2mlad0jbrQX_K7z7iHc-nS_CnPg
config/: config.toml
litter_detection_docker/: .dockerignore  docker-compose.yml
litter_detection_docker/zenoh/: router-config.json5
monitoring/: .env.example  .gitignore  README.md  docker-compose.yml
monitoring/grafana/dashboards/: model-behavior.json  system-resources.json  training-operations.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/otel-collector/: loki-config.yml  otel-collector-config.yaml  tempo-config.yml
monitoring/prometheus/: prometheus.yml
src/: Orchastrator.py  config.py  mlflow_agent.db  task_pipeline.yaml  worker.py
src/autoresearcher_litter_detection.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/camera/: camera_main.py  camera_realsense.py
src/example/: beispiel_zenoh_pub.py  beispiel_zenoh_sub.py  view_path.py
src/inference/: inference_main.py  unet_backend.py  yolo_backend.py
src/interfaces/: motion.py  navigation.py  robot.py
src/interfaces/topics/: __init__.py  topics.py
src/model/: other_models.py  prepare.py  train.py  train_ohne_modeländerung.py
src/nav/: mock_odometry.py  nav_manager.py  path_executor.py  path_planner.py  utils.py
src/robodog/: __init__.py  go2_bridge.py  main.py  settings.py
src/robodog/publishers/: __init__.py  go2_camera_publisher.py  lidar_publisher.py
src/robodog/robodog_control/: robo_dog_controller.py
src/sim/: locomotion_policy.py  model_loader.py  sensors.py  sim_bridge.py  sim_node.py  sim_settings.py
src/sim/data/: unitree_go1.xml
src/tasks/: task1.py  task2_1.py  task2_2.py  task3.py  task4.py  task5.py  task6.py
src/topics/: topics.py
src/topics_json/: Task_json.py
src/topics_pydantic_models/: pydantic_models.py  topics.py
src/viewer/: viewer_main.py
