[project]
name = "autoresearcher-litter-detection"
version = "0.1.0"
description = "Autonomous CNN training for litter segmentation"
requires-python = ">=3.11,<3.14"
dependencies = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "mlflow>=2.13.0",
    "datasets>=2.19.0",
    "Pillow>=10.3.0",
    "numpy>=1.26.0",
    "matplotlib>=3.9.0",
    "tqdm>=4.66.0",
    "scikit-learn>=1.5.0",
    "pycocotools>=2.0.8",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "ipywidgets>=8.1.0",
    "huggingface-hub>=0.23.0",
    "albumentations>=1.4.0",
    "opencv-python-headless>=4.10.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-exporter-otlp>=1.21.0",
    "opentelemetry-instrumentation>=0.42b0",
    "eclipse-zenoh>=1.9.0",
    "ultralytics>=8.2.0",
    "ty>=0.0.29",
    "pre-commit>=4.6.0",
    "onnx>=1.16.0",
    "msgspec>=0.21.1",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pydantic-ai>=0.0.5",
    "openai>=2.34.0",
    "unitree-webrtc-connect",
    "aiortc",
    "av",
]

[tool.uv]
package = true
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "platform_machine == 'x86_64'" }
]

torchvision = [
    { index = "pytorch-cu121", marker = "platform_machine == 'x86_64'" }
]

[project.optional-dependencies]
gpu = ["onnxruntime-gpu>=1.18.0; platform_machine == 'x86_64'"] # uv sync --extra gpu
robot = [
    "unitree-webrtc-connect",
    "aiortc",
    "av",
    "pyrealsense2; sys_platform == 'linux' and platform_machine == 'aarch64'",
] # uv sync --extra robot — only for real Go2 hardware tests
sim = [
    "mujoco>=3.2.0,<3.8",  # mjviser 0.0.12 uses mjENBL_MULTICCD which was removed in 3.8
    "robot-descriptions>=1.10.0",
    "onnxruntime>=1.25.1",
    "mjviser>=0.0.12",
] # uv sync --extra sim — MuJoCo simulation stack

[project.scripts]
orch = "Orchastrator:main"
sim = "sim.sim_node:cli"
robodog = "robodog.main:cli"
t2 = "tasks.task2_2:run_task"